# go2-entanglement-tcn

./: .gitattributes  .gitignore  ABSTRACT.md  LICENSE  README.md  abstract.tex  merge_labels.py  normalize_timestamps.py  plot_thigh_torque.py  requirements.txt  tcn_tikz_sample.tex
csv/: back_both_wire1.csv  back_both_wire2.csv  back_left_hand2.csv  back_left_wire1.csv  back_right_hand1.csv  back_right_hand2.csv  back_right_wire1.csv  front_both_wire2.csv  front_left_hand2.csv  go2_lowstate_entaglement_back_right_intensity.csv  go2_lowstate_entaglement_back_right_stop.csv  go2_lowstate_entaglement_front_right_wire.csv  stop3.csv  walking5.csv
docs/: CONSOLIDATION_REPORT.md  IMPROVEMENTS.md  INTELLIGENT_RECOVERY.md  PLAN.md  PROJECT_OVERVIEW.md  PUBLISH_REVIEW.md  README.md  RECOVERY_CONFIG.md  RECOVERY_DELIVERABLES.md  RECOVERY_DESIGN.md  RECOVERY_TESTING.md  REPORT.md  project_overview.tex  summary.txt
docs/detection/: IMPROVEMENTS.md  REPORT.md  RETRAIN_V2_REPORT.md  VALIDATION_REPORT_V2.md  summary.txt
docs/diagrams/: intelligent_recovery_architecture.md  recovery_flow.md  recovery_state_machine.dot  recovery_strategy_flow.md  strategy_selection_flowchart.md
docs/recovery/: RECOVERY.md
label/: back_both_wire1_label.csv  back_both_wire2_label.csv  back_left_hand1_label.csv  back_left_hand2_label.csv  back_left_wire1_label.csv  back_right_hand1_label.csv  back_right_hand2_label.csv  back_right_wire1_label.csv  front_both_wire1_label.csv  front_both_wire2_label.csv  front_left_hand1_label.csv  front_left_hand2_label.csv  go2_lowstate_entaglement_back_right_intensity_label.csv  go2_lowstate_entaglement_back_right_stop_label.csv  go2_lowstate_entaglement_front_right_wire_label.csv  go2_lowstate_lock_stop_label.csv  go2_lowstate_walk_stop_back_label.csv  stop1_label.csv  stop2_label.csv  stop3_label.csv  walking1_label.csv  walking2_label.csv  walking3_label.csv  walking4_label.csv  walking5_label.csv
ml/: ablation.py  baselines.py  calibration.py  compare_before_after.py  config.py  dataset.py  debounce.py  deploy_eval.py  diagnose.py  evaluate.py  features.py  improvements.py  infer.py  intensity.py  io_load.py  losses.py  model.py  normalize.py  report.py  resample.py  stat_detector.py  sweep_retrain.py  train.py  validate_v2.py  validate_v2_experiments.py  windowing.py
paper/: Makefile  README.md  paper.tex  references.bib
paper/figures/: ros_graph.dot
paper_detection/: FACT_SHEET.md  Makefile  OUTLINE.md  README.md  _floats.tex  paper.tex  references.bib
paper_detection/sections/: _critique.md  abstract.tex  conclusion.tex  data.tex  discussion.tex  expsetup.tex  feature.tex  future.tex  intro.tex  limitations.tex  ml.tex  related.tex  results.tex  runtime.tex
paper_detection_short/: _floats.tex  paper.tex
paper_detection_short/figures/: make_plots.py
robot_package/: README.md  RUNBOOK.md  SETUP_GO2.md  export_model.py  requirements_robot.txt
robot_package/src/entanglement_detector/: package.xml  setup.cfg  setup.py
robot_package/src/entanglement_detector/config/: config.yaml
robot_package/src/entanglement_detector/entanglement_detector/: constants.py  engine.py  intensity.py  lowstate_adapter.py  model_backend.py  node.py  preprocess.py
robot_package/src/entanglement_detector/launch/: entanglement.launch.py
robot_package/src/entanglement_detector/models/: calibration.json  entanglement_tcn.onnx  entanglement_tcn_ts.pt  intensity_calib.json  normalize.json
robot_package/src/entanglement_recovery/: README.md  package.xml  setup.cfg  setup.py
robot_package/src/entanglement_recovery/config/: recovery.yaml
robot_package/src/entanglement_recovery/entanglement_recovery/: plan_runner.py  recovery_fsm.py  recovery_node.py  robot_state.py  sport_api.py  sport_client.py  sport_worker.py  states.py  strategies.py  strategy_manager.py
robot_package/src/entanglement_recovery/launch/: detector_and_recovery.launch.py  recovery.launch.py
robot_package/src/entanglement_recovery/test/: test_plan_runner.py  test_recovery_fsm.py  test_recovery_node.py  test_recovery_sequence.py
temp/: recovery_config.yaml  recovery_node.py  sport_worker.py
(+17 files in other folders)
