<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>entanglement_recovery</name>
  <version>2.0.0</version>
  <description>One-shot front-jump recovery for the Unitree Go2 driven by the leg-entanglement
  detector. On a sustained entanglement alarm the robot performs a single front jump via the
  Unitree SDK2, then latches until reset. Actuation runs in a subprocess with a cleaned DDS
  environment so the SDK2 CycloneDDS participant initialises alongside ROS 2.</description>
  <maintainer email="sauravgupta1375@gmail.com">Saurav Gupta</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>entanglement_interfaces</exec_depend>
  <!-- detector_and_recovery.launch.py launches + resolves the detector package -->
  <exec_depend>entanglement_detector</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- NOTE: actuation uses the Unitree SDK2 Python bindings (unitree_sdk2py), a pip package
       installed into the ROS 2 interpreter on the robot — it is not a rosdep and is loaded
       inside the sport_worker subprocess, not by this ROS node directly. -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
